Fix center align of Add Contributor modal radio buttons for IE11

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4033,7 +4033,7 @@ div.group-add-photo {
 }
 
 .center-radio-inline input[type='radio']{
-	float: initial;
+	float: none;
 	margin: 0;
 }
 
